fixed typos, changed background

--- a/WpfApp2/GUI/LoginPage.xaml
+++ b/WpfApp2/GUI/LoginPage.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp2.GUI"
         mc:Ignorable="d"
         Title="LoginPage" Height="500" Width="400" FontSize="14" Background="Maroon">
-    <Border Background="#4d4d33" CornerRadius="20" Margin="20">
+    <Border Background="Black" CornerRadius="20" Margin="20">
         <StackPanel Margin="20">
             <Label Content="Login" Foreground="Maroon" FontSize="65" HorizontalAlignment="Center" FontFamily="AR BERKLEY"></Label>
             <Separator Background="Maroon"></Separator>
