--- a/WpfApp2/GUI/MyGames.xaml
+++ b/WpfApp2/GUI/MyGames.xaml
@@ -14,7 +14,7 @@
         <DataGrid Name ="dataGrid" CanUserAddRows="False" HorizontalAlignment="Center" Margin="0,30,0,10" HeadersVisibility="Column"
                   VerticalAlignment="Top" Width="669" ColumnWidth="*" Background="Black"/>
         <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
-                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
+                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Back_Button_Click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
