--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -16,7 +16,8 @@
                 <TextBlock FontSize="75" HorizontalAlignment="Center" Margin="0,0,0,0" Foreground="Black" FontWeight="ExtraBlack" FontFamily="AR DELANEY">MuSearch</TextBlock>
                 <Button Name="start" Content="START" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0"  Click="startTheGameButton" Width="100" Height="40" Background="Black" Foreground="Maroon" FontSize="26" FontWeight="ExtraBlack" FontFamily="AR CENA"/>
                 <TextBlock Name="help2" Visibility="Hidden" Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Press on the first letter of the word to check it off. Good Luck!</TextBlock>
-                <TextBlock Name="help1" Visibility="Hidden" Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Want a little bit of help? double click any word to get it's position. Be wear, you will lose some points for that help.</TextBlock>
+                <TextBlock Name="help1a" Visibility="Hidden" Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Want a little bit of help? double click any word to get it's position.</TextBlock>
+                <TextBlock Name="help1b" Visibility="Hidden" Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Beware, you will lose points for that help.</TextBlock>
                 <DataGrid Name ="dataGrid" CanUserAddRows="False" Visibility="Hidden" HorizontalAlignment="Center"  Margin="0,0,0,0" VerticalAlignment="Top" Width="500" HeadersVisibility="None" ColumnWidth="*" SelectedCellsChanged="DataGrid_MouseCapture" SelectionUnit="Cell">
                     <DataGrid.CellStyle>
                         <Style TargetType="DataGridCell" >
